[project]
name = "mudaletunnel"
version = "2.0.0"
description = "Powerful SSH tunnel management tool with static/dynamic tunneling, web interface, and Docker support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TarzEH"}
]
keywords = ["ssh", "tunnel", "port-forwarding", "socks", "proxy", "nmap", "security", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click==8.1.7",
    "colorama==0.4.6",
    "fastapi==0.115.0",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "Pygments==2.18.0",
    "rich==13.8.0",
    "shellingham==1.5.4",
    "typer==0.12.5",
    "typing_extensions==4.12.2",
    "uvicorn==0.32.0",
    "websockets==14.1",
]

[project.scripts]
mudaletunnel = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "main.py",
    "MudaleTunnelUI.py",
    "tunnel_manager.py",
    "web_app.py",
    "config.py",
    "templates/**/*",
    "static/**/*",
    "README.md",
    "LICENSE",
]
